# dyn-plug

./: Cargo.toml  README.md  TESTING.md  build_plugins.sh  config.yaml  http_test.http  run_integration_tests.sh
.kiro/specs/plugin-system-core/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  manager.rs  plugin.rs  registry.rs
core/tests/: config_tests.rs  error_handling_tests.rs  integration_test.rs  plugin_lifecycle_tests.rs  plugin_manager_tests.rs
plugins/plugin_a/: Cargo.toml
plugins/plugin_a/src/: lib.rs
plugins/plugin_b/: Cargo.toml
plugins/plugin_b/src/: lib.rs
plugins/plugin_c/: Cargo.toml
plugins/plugin_c/src/: lib.rs
src/: api.rs  main.rs
tests/: api_integration_tests.rs  cli_integration_tests.rs  end_to_end_tests.rs
