[workspace]
members = [
    "core",
    "plugins/plugin_a",
    "plugins/plugin_b",
    "plugins/plugin_c",
]
resolver = "2"

[package]
name = "dyn-plug"
version = "0.1.0"
edition = "2021"

[dependencies]
dyn-plug-core = { path = "./core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
ctrlc = "3.4"
fs_extra = "1.3"
actix-web = "4.11"
actix-rt = "2.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
rayon = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }